@@ -853,11 +853,6 @@ init (GnomeCmdMainWin *mw)
     gtk_widget_show (mw->priv->file_selector[RIGHT]);
     gtk_paned_pack2 (GTK_PANED (mw->priv->paned), mw->priv->file_selector[RIGHT], TRUE, TRUE);
 
-    gnome_cmd_file_selector_goto_directory (gnome_cmd_main_win_get_left_fs (mw),
-                                            start_dir_left ?: gnome_cmd_data_get_start_dir (LEFT));
-    gnome_cmd_file_selector_goto_directory (gnome_cmd_main_win_get_right_fs (mw),
-                                            start_dir_right ?: gnome_cmd_data_get_start_dir (RIGHT));
-
     gnome_cmd_main_win_update_toolbar_visibility (main_win);
     gnome_cmd_main_win_update_cmdline_visibility (main_win);
     gnome_cmd_main_win_update_buttonbar_visibility (main_win);
@@ -899,6 +894,11 @@ init (GnomeCmdMainWin *mw)
     gnome_cmd_file_selector_set_connection (
         gnome_cmd_main_win_get_right_fs (mw),
         gnome_cmd_con_list_get_home (gnome_cmd_data_get_con_list ()), NULL);
+
+    gnome_cmd_file_selector_goto_directory (gnome_cmd_main_win_get_left_fs (mw),
+                                            start_dir_left ? start_dir_left : gnome_cmd_data_get_start_dir (LEFT));
+    gnome_cmd_file_selector_goto_directory (gnome_cmd_main_win_get_right_fs (mw),
+                                            start_dir_right ? start_dir_right : gnome_cmd_data_get_start_dir (RIGHT));
 
     gtk_window_add_accel_group (GTK_WINDOW (main_win), mw->priv->accel_group);
     gnome_cmd_main_win_focus_file_lists (main_win);
